--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "client-gateway"]
 	path = client-gateway
 	url = https://github.com/nest-microservices-arch/client-gateway.git
+[submodule "orders-ms"]
+	path = orders-ms
+	url = https://github.com/nest-microservices-arch/products-ms.git
