Add payments-ms submodule and update environment configuration in .env.template and docker-compose.yml

--- a/.env.template
+++ b/.env.template
@@ -13,6 +13,17 @@ ORDERS_DB_USER=postgres
 ORDERS_DB_PASSWORD=postgres
 ORDERS_DB_NAME=ordersdb
 
+## PAYMENTS MS
+PAYMENTS_MS_PORT=3003
+#stripe secret key
+STRIPE_SECRET=
+#stripe success url
+STRIPE_SUCCESS_URL= http://localhost:3003/payments/success
+#stripe cancel url
+STRIPE_CANCEL_URL= http://localhost:3003/payments/cancel
+#signing secret for local testing
+STRIPE_ENDPOINT_SECRET=
+
 ## NATS SERVER
 NATS_SERVER_PUBLIC_PORT=8222
 NATS_SERVERS=nats://nats-server:4222
