Update submodules auth-ms and client-gateway to latest commits; add DATABASE_URL and JWT_SECRET to auth-ms service in docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,7 +52,8 @@ services:
     environment:
       - PORT=${AUTH_MS_PORT}
       - NATS_SERVERS=${NATS_SERVERS}
-
+      - DATABASE_URL=${AUTH_MS_DATABASE_URL}
+      - JWT_SECRET=${JWT_SECRET}
   payments-ms:
     container_name: payments-ms
     build: ./payments-ms
